cmake_minimum_required(VERSION 3.24)
project(
	tint
	LANGUAGES CXX
)

set(TINT_CORE_SOURCES
	"src/tint/api/common/vertex_pulling_config.cc"
	"src/tint/api/tint.cc"
	"src/tint/lang/core/access.cc"
	"src/tint/lang/core/address_space.cc"
	"src/tint/lang/core/attribute.cc"
	"src/tint/lang/core/binary_op.cc"
	"src/tint/lang/core/builtin_fn.cc"
	"src/tint/lang/core/builtin_type.cc"
	"src/tint/lang/core/builtin_value.cc"
	"src/tint/lang/core/constant/composite.cc"
	"src/tint/lang/core/constant/eval.cc"
	"src/tint/lang/core/constant/invalid.cc"
	"src/tint/lang/core/constant/manager.cc"
	"src/tint/lang/core/constant/node.cc"
	"src/tint/lang/core/constant/scalar.cc"
	"src/tint/lang/core/constant/splat.cc"
	"src/tint/lang/core/constant/value.cc"
	"src/tint/lang/core/interpolation_sampling.cc"
	"src/tint/lang/core/interpolation_type.cc"
	"src/tint/lang/core/intrinsic/ctor_conv.cc"
	"src/tint/lang/core/intrinsic/data.cc"
	"src/tint/lang/core/intrinsic/table.cc"
	"src/tint/lang/core/ir/access.cc"
	"src/tint/lang/core/ir/analysis/integer_range_analysis.cc"
	"src/tint/lang/core/ir/analysis/loop_analysis.cc"
	"src/tint/lang/core/ir/binary.cc"
	"src/tint/lang/core/ir/bitcast.cc"
	"src/tint/lang/core/ir/block.cc"
	"src/tint/lang/core/ir/block_param.cc"
	"src/tint/lang/core/ir/break_if.cc"
	"src/tint/lang/core/ir/builder.cc"
	"src/tint/lang/core/ir/builtin_call.cc"
	"src/tint/lang/core/ir/call.cc"
	"src/tint/lang/core/ir/clone_context.cc"
	"src/tint/lang/core/ir/constant.cc"
	"src/tint/lang/core/ir/constexpr_if.cc"
	"src/tint/lang/core/ir/const_param_validator.cc"
	"src/tint/lang/core/ir/construct.cc"
	"src/tint/lang/core/ir/continue.cc"
	"src/tint/lang/core/ir/control_instruction.cc"
	"src/tint/lang/core/ir/convert.cc"
	"src/tint/lang/core/ir/core_binary.cc"
	"src/tint/lang/core/ir/core_builtin_call.cc"
	"src/tint/lang/core/ir/core_unary.cc"
	"src/tint/lang/core/ir/disassembler.cc"
	"src/tint/lang/core/ir/discard.cc"
	"src/tint/lang/core/ir/evaluator.cc"
	"src/tint/lang/core/ir/exit.cc"
	"src/tint/lang/core/ir/exit_if.cc"
	"src/tint/lang/core/ir/exit_loop.cc"
	"src/tint/lang/core/ir/exit_switch.cc"
	"src/tint/lang/core/ir/function.cc"
	"src/tint/lang/core/ir/function_param.cc"
	"src/tint/lang/core/ir/if.cc"
	"src/tint/lang/core/ir/instruction.cc"
	"src/tint/lang/core/ir/instruction_result.cc"
	"src/tint/lang/core/ir/let.cc"
	"src/tint/lang/core/ir/load.cc"
	"src/tint/lang/core/ir/load_vector_element.cc"
	"src/tint/lang/core/ir/loop.cc"
	"src/tint/lang/core/ir/member_builtin_call.cc"
	"src/tint/lang/core/ir/module.cc"
	"src/tint/lang/core/ir/multi_in_block.cc"
	"src/tint/lang/core/ir/next_iteration.cc"
	"src/tint/lang/core/ir/operand_instruction.cc"
	"src/tint/lang/core/ir/override.cc"
	"src/tint/lang/core/ir/phony.cc"
	"src/tint/lang/core/ir/reflection.cc"
	"src/tint/lang/core/ir/return.cc"
	"src/tint/lang/core/ir/store.cc"
	"src/tint/lang/core/ir/store_vector_element.cc"
	"src/tint/lang/core/ir/switch.cc"
	"src/tint/lang/core/ir/swizzle.cc"
	"src/tint/lang/core/ir/terminate_invocation.cc"
	"src/tint/lang/core/ir/terminator.cc"
	"src/tint/lang/core/ir/transform/add_empty_entry_point.cc"
	"src/tint/lang/core/ir/transform/array_length_from_uniform.cc"
	"src/tint/lang/core/ir/transform/bgra8unorm_polyfill.cc"
	"src/tint/lang/core/ir/transform/binary_polyfill.cc"
	"src/tint/lang/core/ir/transform/binding_remapper.cc"
	"src/tint/lang/core/ir/transform/block_decorated_structs.cc"
	"src/tint/lang/core/ir/transform/builtin_polyfill.cc"
	"src/tint/lang/core/ir/transform/combine_access_instructions.cc"
	"src/tint/lang/core/ir/transform/conversion_polyfill.cc"
	"src/tint/lang/core/ir/transform/demote_to_helper.cc"
	"src/tint/lang/core/ir/transform/direct_variable_access.cc"
	"src/tint/lang/core/ir/transform/multiplanar_external_texture.cc"
	"src/tint/lang/core/ir/transform/prepare_immediate_data.cc"
	"src/tint/lang/core/ir/transform/preserve_padding.cc"
	"src/tint/lang/core/ir/transform/prevent_infinite_loops.cc"
	"src/tint/lang/core/ir/transform/remove_continue_in_switch.cc"
	"src/tint/lang/core/ir/transform/remove_terminator_args.cc"
	"src/tint/lang/core/ir/transform/rename_conflicts.cc"
	"src/tint/lang/core/ir/transform/robustness.cc"
	"src/tint/lang/core/ir/transform/shader_io.cc"
	"src/tint/lang/core/ir/transform/single_entry_point.cc"
	"src/tint/lang/core/ir/transform/std140.cc"
	"src/tint/lang/core/ir/transform/substitute_overrides.cc"
	"src/tint/lang/core/ir/transform/value_to_let.cc"
	"src/tint/lang/core/ir/transform/vectorize_scalar_matrix_constructors.cc"
	"src/tint/lang/core/ir/transform/vertex_pulling.cc"
	"src/tint/lang/core/ir/transform/zero_init_workgroup_memory.cc"
	"src/tint/lang/core/ir/type/array_count.cc"
	"src/tint/lang/core/ir/unary.cc"
	"src/tint/lang/core/ir/unreachable.cc"
	"src/tint/lang/core/ir/unused.cc"
	"src/tint/lang/core/ir/user_call.cc"
	"src/tint/lang/core/ir/validator.cc"
	"src/tint/lang/core/ir/value.cc"
	"src/tint/lang/core/ir/var.cc"
	"src/tint/lang/core/number.cc"
	"src/tint/lang/core/parameter_usage.cc"
	"src/tint/lang/core/subgroup_matrix_kind.cc"
	"src/tint/lang/core/texel_format.cc"
	"src/tint/lang/core/type/abstract_float.cc"
	"src/tint/lang/core/type/abstract_int.cc"
	"src/tint/lang/core/type/abstract_numeric.cc"
	"src/tint/lang/core/type/array.cc"
	"src/tint/lang/core/type/array_count.cc"
	"src/tint/lang/core/type/atomic.cc"
	"src/tint/lang/core/type/binding_array.cc"
	"src/tint/lang/core/type/bool.cc"
	"src/tint/lang/core/type/builtin_structs.cc"
	"src/tint/lang/core/type/depth_multisampled_texture.cc"
	"src/tint/lang/core/type/depth_texture.cc"
	"src/tint/lang/core/type/external_texture.cc"
	"src/tint/lang/core/type/f16.cc"
	"src/tint/lang/core/type/f32.cc"
	"src/tint/lang/core/type/function.cc"
	"src/tint/lang/core/type/i32.cc"
	"src/tint/lang/core/type/i8.cc"
	"src/tint/lang/core/type/input_attachment.cc"
	"src/tint/lang/core/type/invalid.cc"
	"src/tint/lang/core/type/manager.cc"
	"src/tint/lang/core/type/matrix.cc"
	"src/tint/lang/core/type/memory_view.cc"
	"src/tint/lang/core/type/multisampled_texture.cc"
	"src/tint/lang/core/type/node.cc"
	"src/tint/lang/core/type/numeric_scalar.cc"
	"src/tint/lang/core/type/pointer.cc"
	"src/tint/lang/core/type/reference.cc"
	"src/tint/lang/core/type/sampled_texture.cc"
	"src/tint/lang/core/type/sampler.cc"
	"src/tint/lang/core/type/sampler_kind.cc"
	"src/tint/lang/core/type/scalar.cc"
	"src/tint/lang/core/type/storage_texture.cc"
	"src/tint/lang/core/type/struct.cc"
	"src/tint/lang/core/type/subgroup_matrix.cc"
	"src/tint/lang/core/type/texture.cc"
	"src/tint/lang/core/type/texture_dimension.cc"
	"src/tint/lang/core/type/type.cc"
	"src/tint/lang/core/type/u32.cc"
	"src/tint/lang/core/type/u64.cc"
	"src/tint/lang/core/type/u8.cc"
	"src/tint/lang/core/type/unique_node.cc"
	"src/tint/lang/core/type/vector.cc"
	"src/tint/lang/core/type/void.cc"
	"src/tint/lang/core/unary_op.cc"
)

set(TINT_SPIRV_SOURCES
	"src/tint/lang/spirv/builtin_fn.cc"
	"src/tint/lang/spirv/intrinsic/data.cc"
	"src/tint/lang/spirv/ir/builtin_call.cc"
	"src/tint/lang/spirv/ir/literal_operand.cc"
	"src/tint/lang/spirv/type/explicit_layout_array.cc"
	"src/tint/lang/spirv/type/image.cc"
	"src/tint/lang/spirv/type/sampled_image.cc"
	"src/tint/lang/spirv/validate/validate.cc"
	"src/tint/lang/spirv/writer/common/binary_writer.cc"
	"src/tint/lang/spirv/writer/common/function.cc"
	"src/tint/lang/spirv/writer/common/instruction.cc"
	"src/tint/lang/spirv/writer/common/module.cc"
	"src/tint/lang/spirv/writer/common/operand.cc"
	"src/tint/lang/spirv/writer/common/option_helper.cc"
	"src/tint/lang/spirv/writer/common/output.cc"
	"src/tint/lang/spirv/writer/helpers/generate_bindings.cc"
	"src/tint/lang/spirv/writer/printer/printer.cc"
	"src/tint/lang/spirv/writer/raise/builtin_polyfill.cc"
	"src/tint/lang/spirv/writer/raise/expand_implicit_splats.cc"
	"src/tint/lang/spirv/writer/raise/fork_explicit_layout_types.cc"
	"src/tint/lang/spirv/writer/raise/handle_matrix_arithmetic.cc"
	"src/tint/lang/spirv/writer/raise/merge_return.cc"
	"src/tint/lang/spirv/writer/raise/pass_matrix_by_pointer.cc"
	"src/tint/lang/spirv/writer/raise/raise.cc"
	"src/tint/lang/spirv/writer/raise/remove_unreachable_in_loop_continuing.cc"
	"src/tint/lang/spirv/writer/raise/shader_io.cc"
	"src/tint/lang/spirv/writer/raise/var_for_dynamic_index.cc"
	"src/tint/lang/spirv/writer/writer.cc"
	"src/tint/lang/wgsl/ast/accessor_expression.cc"
	"src/tint/lang/wgsl/ast/alias.cc"
	"src/tint/lang/wgsl/ast/assignment_statement.cc"
	"src/tint/lang/wgsl/ast/attribute.cc"
	"src/tint/lang/wgsl/ast/binary_expression.cc"
	"src/tint/lang/wgsl/ast/binding_attribute.cc"
	"src/tint/lang/wgsl/ast/blend_src_attribute.cc"
	"src/tint/lang/wgsl/ast/block_statement.cc"
	"src/tint/lang/wgsl/ast/bool_literal_expression.cc"
	"src/tint/lang/wgsl/ast/break_if_statement.cc"
	"src/tint/lang/wgsl/ast/break_statement.cc"
	"src/tint/lang/wgsl/ast/builder.cc"
	"src/tint/lang/wgsl/ast/builtin_attribute.cc"
	"src/tint/lang/wgsl/ast/call_expression.cc"
	"src/tint/lang/wgsl/ast/call_statement.cc"
	"src/tint/lang/wgsl/ast/case_selector.cc"
	"src/tint/lang/wgsl/ast/case_statement.cc"
	"src/tint/lang/wgsl/ast/clone_context.cc"
	"src/tint/lang/wgsl/ast/color_attribute.cc"
	"src/tint/lang/wgsl/ast/compound_assignment_statement.cc"
	"src/tint/lang/wgsl/ast/const_assert.cc"
	"src/tint/lang/wgsl/ast/const.cc"
	"src/tint/lang/wgsl/ast/continue_statement.cc"
	"src/tint/lang/wgsl/ast/diagnostic_attribute.cc"
	"src/tint/lang/wgsl/ast/diagnostic_control.cc"
	"src/tint/lang/wgsl/ast/diagnostic_directive.cc"
	"src/tint/lang/wgsl/ast/diagnostic_rule_name.cc"
	"src/tint/lang/wgsl/ast/disable_validation_attribute.cc"
	"src/tint/lang/wgsl/ast/discard_statement.cc"
	"src/tint/lang/wgsl/ast/enable.cc"
	"src/tint/lang/wgsl/ast/expression.cc"
	"src/tint/lang/wgsl/ast/extension.cc"
	"src/tint/lang/wgsl/ast/float_literal_expression.cc"
	"src/tint/lang/wgsl/ast/for_loop_statement.cc"
	"src/tint/lang/wgsl/ast/function.cc"
	"src/tint/lang/wgsl/ast/group_attribute.cc"
	"src/tint/lang/wgsl/ast/id_attribute.cc"
	"src/tint/lang/wgsl/ast/identifier.cc"
	"src/tint/lang/wgsl/ast/identifier_expression.cc"
	"src/tint/lang/wgsl/ast/if_statement.cc"
	"src/tint/lang/wgsl/ast/increment_decrement_statement.cc"
	"src/tint/lang/wgsl/ast/index_accessor_expression.cc"
	"src/tint/lang/wgsl/ast/input_attachment_index_attribute.cc"
	"src/tint/lang/wgsl/ast/internal_attribute.cc"
	"src/tint/lang/wgsl/ast/interpolate_attribute.cc"
	"src/tint/lang/wgsl/ast/int_literal_expression.cc"
	"src/tint/lang/wgsl/ast/invariant_attribute.cc"
	"src/tint/lang/wgsl/ast/let.cc"
	"src/tint/lang/wgsl/ast/literal_expression.cc"
	"src/tint/lang/wgsl/ast/location_attribute.cc"
	"src/tint/lang/wgsl/ast/loop_statement.cc"
	"src/tint/lang/wgsl/ast/member_accessor_expression.cc"
	"src/tint/lang/wgsl/ast/module.cc"
	"src/tint/lang/wgsl/ast/must_use_attribute.cc"
	"src/tint/lang/wgsl/ast/node.cc"
	"src/tint/lang/wgsl/ast/override.cc"
	"src/tint/lang/wgsl/ast/parameter.cc"
	"src/tint/lang/wgsl/ast/phony_expression.cc"
	"src/tint/lang/wgsl/ast/pipeline_stage.cc"
	"src/tint/lang/wgsl/ast/requires.cc"
	"src/tint/lang/wgsl/ast/return_statement.cc"
	"src/tint/lang/wgsl/ast/row_major_attribute.cc"
	"src/tint/lang/wgsl/ast/stage_attribute.cc"
	"src/tint/lang/wgsl/ast/statement.cc"
	"src/tint/lang/wgsl/ast/stride_attribute.cc"
	"src/tint/lang/wgsl/ast/struct.cc"
	"src/tint/lang/wgsl/ast/struct_member_align_attribute.cc"
	"src/tint/lang/wgsl/ast/struct_member.cc"
	"src/tint/lang/wgsl/ast/struct_member_offset_attribute.cc"
	"src/tint/lang/wgsl/ast/struct_member_size_attribute.cc"
	"src/tint/lang/wgsl/ast/switch_statement.cc"
	"src/tint/lang/wgsl/ast/templated_identifier.cc"
	"src/tint/lang/wgsl/ast/transform/add_empty_entry_point.cc"
	"src/tint/lang/wgsl/ast/transform/array_length_from_uniform.cc"
	"src/tint/lang/wgsl/ast/transform/binding_remapper.cc"
	"src/tint/lang/wgsl/ast/transform/builtin_polyfill.cc"
	"src/tint/lang/wgsl/ast/transform/canonicalize_entry_point_io.cc"
	"src/tint/lang/wgsl/ast/transform/data.cc"
	"src/tint/lang/wgsl/ast/transform/demote_to_helper.cc"
	"src/tint/lang/wgsl/ast/transform/direct_variable_access.cc"
	"src/tint/lang/wgsl/ast/transform/disable_uniformity_analysis.cc"
	"src/tint/lang/wgsl/ast/transform/expand_compound_assignment.cc"
	"src/tint/lang/wgsl/ast/transform/first_index_offset.cc"
	"src/tint/lang/wgsl/ast/transform/fold_constants.cc"
	"src/tint/lang/wgsl/ast/transform/get_insertion_point.cc"
	"src/tint/lang/wgsl/ast/transform/hoist_to_decl_before.cc"
	"src/tint/lang/wgsl/ast/transform/manager.cc"
	"src/tint/lang/wgsl/ast/transform/multiplanar_external_texture.cc"
	"src/tint/lang/wgsl/ast/transform/promote_initializers_to_let.cc"
	"src/tint/lang/wgsl/ast/transform/promote_side_effects_to_decl.cc"
	"src/tint/lang/wgsl/ast/transform/remove_continue_in_switch.cc"
	"src/tint/lang/wgsl/ast/transform/remove_phonies.cc"
	"src/tint/lang/wgsl/ast/transform/remove_unreachable_statements.cc"
	"src/tint/lang/wgsl/ast/transform/renamer.cc"
	"src/tint/lang/wgsl/ast/transform/robustness.cc"
	"src/tint/lang/wgsl/ast/transform/simplify_pointers.cc"
	"src/tint/lang/wgsl/ast/transform/single_entry_point.cc"
	"src/tint/lang/wgsl/ast/transform/substitute_override.cc"
	"src/tint/lang/wgsl/ast/transform/transform.cc"
	"src/tint/lang/wgsl/ast/transform/unshadow.cc"
	"src/tint/lang/wgsl/ast/transform/vectorize_scalar_matrix_initializers.cc"
	"src/tint/lang/wgsl/ast/transform/zero_init_workgroup_memory.cc"
	"src/tint/lang/wgsl/ast/type.cc"
	"src/tint/lang/wgsl/ast/type_decl.cc"
	"src/tint/lang/wgsl/ast/unary_op_expression.cc"
	"src/tint/lang/wgsl/ast/var.cc"
	"src/tint/lang/wgsl/ast/variable.cc"
	"src/tint/lang/wgsl/ast/variable_decl_statement.cc"
	"src/tint/lang/wgsl/ast/while_statement.cc"
	"src/tint/lang/wgsl/ast/workgroup_attribute.cc"
	"src/tint/lang/wgsl/builtin_fn.cc"
	"src/tint/lang/wgsl/diagnostic_rule.cc"
	"src/tint/lang/wgsl/diagnostic_severity.cc"
	"src/tint/lang/wgsl/extension.cc"
	"src/tint/lang/wgsl/feature_status.cc"
	"src/tint/lang/wgsl/inspector/entry_point.cc"
	"src/tint/lang/wgsl/inspector/inspector.cc"
	"src/tint/lang/wgsl/inspector/resource_binding.cc"
	"src/tint/lang/wgsl/inspector/scalar.cc"
	"src/tint/lang/wgsl/intrinsic/ctor_conv.cc"
	"src/tint/lang/wgsl/intrinsic/data.cc"
	"src/tint/lang/wgsl/ir/builtin_call.cc"
	"src/tint/lang/wgsl/ir/unary.cc"
	"src/tint/lang/wgsl/language_feature.cc"
	"src/tint/lang/wgsl/program/clone_context.cc"
	"src/tint/lang/wgsl/program/program_builder.cc"
	"src/tint/lang/wgsl/program/program.cc"
	"src/tint/lang/wgsl/reader/lower/lower.cc"
	"src/tint/lang/wgsl/reader/parser/classify_template_args.cc"
	"src/tint/lang/wgsl/reader/parser/lexer.cc"
	"src/tint/lang/wgsl/reader/parser/parser.cc"
	"src/tint/lang/wgsl/reader/parser/token.cc"
	"src/tint/lang/wgsl/reader/program_to_ir/program_to_ir.cc"
	"src/tint/lang/wgsl/reader/reader.cc"
	"src/tint/lang/wgsl/reserved_words.cc"
	"src/tint/lang/wgsl/resolver/dependency_graph.cc"
	"src/tint/lang/wgsl/resolver/incomplete_type.cc"
	"src/tint/lang/wgsl/resolver/resolve.cc"
	"src/tint/lang/wgsl/resolver/resolver.cc"
	"src/tint/lang/wgsl/resolver/sem_helper.cc"
	"src/tint/lang/wgsl/resolver/uniformity.cc"
	"src/tint/lang/wgsl/resolver/unresolved_identifier.cc"
	"src/tint/lang/wgsl/resolver/validator.cc"
	"src/tint/lang/wgsl/sem/accessor_expression.cc"
	"src/tint/lang/wgsl/sem/array.cc"
	"src/tint/lang/wgsl/sem/array_count.cc"
	"src/tint/lang/wgsl/sem/behavior.cc"
	"src/tint/lang/wgsl/sem/block_statement.cc"
	"src/tint/lang/wgsl/sem/break_if_statement.cc"
	"src/tint/lang/wgsl/sem/builtin_enum_expression.cc"
	"src/tint/lang/wgsl/sem/builtin_fn.cc"
	"src/tint/lang/wgsl/sem/call.cc"
	"src/tint/lang/wgsl/sem/call_target.cc"
	"src/tint/lang/wgsl/sem/expression.cc"
	"src/tint/lang/wgsl/sem/for_loop_statement.cc"
	"src/tint/lang/wgsl/sem/function.cc"
	"src/tint/lang/wgsl/sem/function_expression.cc"
	"src/tint/lang/wgsl/sem/if_statement.cc"
	"src/tint/lang/wgsl/sem/index_accessor_expression.cc"
	"src/tint/lang/wgsl/sem/info.cc"
	"src/tint/lang/wgsl/sem/load.cc"
	"src/tint/lang/wgsl/sem/loop_statement.cc"
	"src/tint/lang/wgsl/sem/materialize.cc"
	"src/tint/lang/wgsl/sem/member_accessor_expression.cc"
	"src/tint/lang/wgsl/sem/module.cc"
	"src/tint/lang/wgsl/sem/node.cc"
	"src/tint/lang/wgsl/sem/statement.cc"
	"src/tint/lang/wgsl/sem/struct.cc"
	"src/tint/lang/wgsl/sem/switch_statement.cc"
	"src/tint/lang/wgsl/sem/type_expression.cc"
	"src/tint/lang/wgsl/sem/value_constructor.cc"
	"src/tint/lang/wgsl/sem/value_conversion.cc"
	"src/tint/lang/wgsl/sem/value_expression.cc"
	"src/tint/lang/wgsl/sem/variable.cc"
	"src/tint/lang/wgsl/sem/while_statement.cc"
)


set(TINT_UTILS_SOURCES
	"src/tint/utils/bytes/buffer_reader.cc"
	"src/tint/utils/bytes/reader.cc"
	"src/tint/utils/containers/containers.cc"
	"src/tint/utils/diagnostic/diagnostic.cc"
	"src/tint/utils/diagnostic/formatter.cc"
	"src/tint/utils/diagnostic/source.cc"
	"src/tint/utils/generation_id.cc"
	"src/tint/utils/ice/debugger.cc"
	"src/tint/utils/ice/ice.cc"
	"src/tint/utils/macros/macros.cc"
	"src/tint/utils/math/math.cc"
	"src/tint/utils/memory/memory.cc"
	"src/tint/utils/reflection.cc"
	"src/tint/utils/result.cc"
	"src/tint/utils/rtti/castable.cc"
	"src/tint/utils/rtti/switch.cc"
	"src/tint/utils/strconv/float_to_string.cc"
	"src/tint/utils/strconv/parse_num.cc"
	"src/tint/utils/symbol/symbol.cc"
	"src/tint/utils/symbol/symbol_table.cc"
	"src/tint/utils/system/env_other.cc"
	"src/tint/utils/system/terminal_other.cc"
	"src/tint/utils/text/base64.cc"
	"src/tint/utils/text/color_mode.cc"
	"src/tint/utils/text/string.cc"
	"src/tint/utils/text/string_stream.cc"
	"src/tint/utils/text/styled_text.cc"
	"src/tint/utils/text/styled_text_printer.cc"
	"src/tint/utils/text/styled_text_printer_other.cc"
	"src/tint/utils/text/styled_text_theme.cc"
	"src/tint/utils/text/unicode.cc"
	"src/tint/utils/text_generator/text_generator.cc"
)

set(FETCHCONTENT_QUIET FALSE)
include(FetchContent)

add_library(${PROJECT_NAME} STATIC)

target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)

target_compile_definitions(
	${PROJECT_NAME} PUBLIC
		"TINT_BUILD_WGSL_READER=1"
		"TINT_BUILD_SPV_WRITER=1"
)

target_include_directories(
	${PROJECT_NAME} PUBLIC
		"${PROJECT_SOURCE_DIR}"
		"${PROJECT_SOURCE_DIR}/include"
)

target_sources(
	${PROJECT_NAME} PRIVATE
		${TINT_CORE_SOURCES}
		${TINT_WGSL_SOURCES}
		${TINT_SPIRV_SOURCES}
		${TINT_UTILS_SOURCES}
)

if(NOT TARGET SPIRV-Headers::SPIRV-Headers)
	FetchContent_Declare(
		spirv_headers
		GIT_REPOSITORY "git@github.com:KhronosGroup/SPIRV-Headers.git"
		GIT_TAG main
		GIT_PROGRESS TRUE
	)
	FetchContent_MakeAvailable(spirv_headers)
endif()

target_link_libraries(
	${PROJECT_NAME} PRIVATE
		SPIRV-Headers::SPIRV-Headers
)
